# mmwave_radar_processing

./: .env  .gitignore  .gitmodules  README.md  pyproject.toml  reproduce_min_error.py
analyzer_configs/: multi_dataset_velocity_analysis_config.yaml  velocity_analysis_config.yaml
configs/: 1843_RaGNNarok.cfg  1843_RaGNNarok_UAV_10m.cfg  1843_RaGNNarok_UAV_50m.cfg  1843_RaGNNarok_UAV_5m.cfg  1843_RadVel_10Hz.cfg  1843_RadVel_10Hz_lr.cfg  1843_RadVel_10Hz_lr_SAR.cfg  1843_RadVel_20Hz.cfg  1843_RadVel_5Hz.cfg  1843_human_movement.cfg  1843_vel_nav.cfg  1843_vel_sr.cfg  6843_RadVel_ods_10Hz.cfg  6843_RadVel_ods_20Hz.cfg  6843_hand_ods_30Hz.cfg  6843_vel_sr.cfg  RadCloud.cfg  RadCloud_original.cfg  RadSAR.cfg  RadSAR_1843_official.cfg  RadSAR_2_sr.cfg  RadSAR_lr.cfg  RadVel.cfg  RadarHD.cfg
dev_resources/: .gitignore
docs/: GUI.md  detectors.md  logging.md  processors.md  sample_GUI.md
gui_configs/: dataset_params.yaml  dataset_params_1843.yaml  processor_params.yaml  processor_params_1843.yaml
notebooks/: IcaRAus_testing_flow.ipynb  array_calcs.ipynb  calibrating_synthetic_arrays.ipynb  doppler_beam_sharpening.ipynb  eval_cfg_file.ipynb  hermes_testing_altitude_estimation.ipynb  hermes_testing_synthetic_array_processing_multiFrame.ipynb  hermes_testing_vel_estimation_outward_points.ipynb  ods_down_velocity_estimation_initial_work.ipynb  ragnnarok_air_testing_odometry.ipynb  ragnnarok_air_testing_vel_estimation_downward_points.ipynb  random_calcs.ipynb  sar_misc_code.ipynb  testing.ipynb  testing_altitude_estimation.ipynb  testing_altitude_estimation_ods.ipynb  testing_altitude_estimation_standard.ipynb  (+18 more)
(+102 files in other folders)
